--- a/index.html
+++ b/index.html
@@ -3,33 +3,112 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="app.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      crossorigin="anonymous" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Job Application Tracker</title>
   </head>
   <body>
-    <h1>Job Application Tracker</h1>
-    <form id="applicationForm">
-      <label for="company">Company Name:</label>
-      <input type="text" id="company" name="company" required />
-      <br />
-      <label for="Role">Role:</label>
-      <input type="text" id="Role" name="Role" required />
-      <br />
-      <label for="position">Position:</label>
-      <input type="text" id="position" name="position" required />
-      <br />
-      <label for="jobType">Job Type:</label>
-      <select id="jobType" name="jobType">
-        <option value="Remote">Remote</option>
-        <option value="Onsite">Onsite</option>
-        <option value="Hybrid">Hybrid</option>
-      </select>
-      <br />
-      <button type="submit">Add Application</button>
-    </form>
+    <div class="app">
+      <h2 class="heading">Job Application Tracker</h2>
+      <div class="header w-full text-center" id="statusCounts">
+        Job Applications: 0 | Applied: 0 | Interviewing: 0 | Hired: 0 |
+        Rejected: 0
+      </div>
+      <div class="main m-0 mt-2 gap-2 px-2">
+        <div class="left container border rounded">
+          <h4>Application Form</h4>
+          <form id="applicationForm">
+            <label for="company"> Complany Name :</label>
+            <input
+              type="text"
+              id="company"
+              class="form-control"
+              placeholder="Company name" required/>
+            <label for="role"> Role :</label>
+            <input
+              type="text"
+              id="role"
+              required
+              class="form-control"
+              placeholder="Enter role" />
+            <label for="jobType">JobType :</label>
+            <select id="jobType" class="form-control" required>
+              <option value="" selected disabled>select job type</option>
+              <option value="Remote">Remote</option>
+              <option value="Onsite">Onsite</option>
+              <option value="Hybrid">Hybrid</option>
+            </select>
 
-    <h2>Applications</h2>
-    <ul id="applicationList"></ul>
+            <label for="locationLabel" id="locationLabel">Location :</label>
+            <input
+              type="text"
+              id="location"
+              class="form-control"
+              required
+              placeholder="Enter location" />
 
+            <label for="date">Appliction date :</label>
+            <input
+              type="date"
+              id="date"
+              class="form-control"
+              required
+              disabled/>
+
+            <label for="status">Application Status:</label>
+            <select id="status" class="form-control" required>
+              <option value="" selected disabled>select status</option>
+              <option value="Applied">Applied</option>
+              <option value="Interviewing">Interviewing</option>
+              <option value="Rejected">Rejected</option>
+              <option value="Hired">Hired</option>
+            </select>
+
+            <label for="notes">Notes:</label>
+            <input id="notes" class="form-control"></input>
+
+            <button type="submit" id="submitBtn" class="btn btn-primary mt-2 p-1">
+              Add Application
+            </button>
+          </form>
+        </div>
+
+        <div class="right container border rounded">
+          <h3 class="text-center">Job Applications Table</h3>
+          <div style="position: relative; width: 300px;">
+           <input
+           type="text"
+           id="searchInput"
+           class="form-control mb-3"
+           placeholder="Search"/>
+           <i class="fas fa-times clear-btn" style="position: absolute; right: 10px; top: 10px; cursor: pointer; color: red;" id="clearBtn"></i>
+          </div>
+
+          <div class="table-responsive">
+          <table>
+            <thead class="border ">
+              <tr>
+                <th></th>
+                <th>Company</th>
+                <th>Role</th>
+                <th>Type</th>
+                <th>Location</th>
+                <th>Date</th>
+                <th>Status</th>
+                <th class="text-center">Notes</th>
+                <th class="text-end">Actions</th>
+              </tr>
+            </thead>
+            <tbody id="List"></tbody>
+          </table>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
